Style code examples nicely

--- a/resources/prone/prism.css
+++ b/resources/prone/prism.css
@@ -1,4 +1,4 @@
-/* http://prismjs.com/download.html?themes=prism&languages=clike+java+groovy+scala&plugins=line-highlight+line-numbers */
+/* http://prismjs.com/download.html?themes=prism&languages=clike+javascript+java+groovy+scala&plugins=line-highlight */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -176,43 +176,3 @@ pre[data-line] {
 		top: auto;
 		bottom: .4em;
 	}
-pre.line-numbers {
-	position: relative;
-	padding-left: 3.8em;
-	counter-reset: linenumber;
-}
-
-pre.line-numbers > code {
-	position: relative;
-}
-
-.line-numbers .line-numbers-rows {
-	position: absolute;
-	pointer-events: none;
-	top: 0;
-	font-size: 100%;
-	left: -3.8em;
-	width: 3em; /* works for line-numbers below 1000 lines */
-	letter-spacing: -1px;
-	border-right: 1px solid #999;
-
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-
-}
-
-	.line-numbers-rows > span {
-		pointer-events: none;
-		display: block;
-		counter-increment: linenumber;
-	}
-
-		.line-numbers-rows > span:before {
-			content: counter(linenumber);
-			color: #999;
-			display: block;
-			padding-right: 0.8em;
-			text-align: right;
-		}
