--- a/resources/prone/styles.css
+++ b/resources/prone/styles.css
@@ -1,3 +1,6 @@
 .hidden {display: none !important;}
 .token.operator {background: none;}
 .subtle {color: #aaa;}
+pre[class*="language-"] {margin-top: 0 !important; background: #fff; padding-bottom: 1.75em !important;}
+.code_linenums {padding-top: 11px;}
+.line-highlight {background: rgba(220, 30, 30, 0.1); -webkit-animation: highlight 400ms linear 1; -moz-animation: highlight 400ms linear 1; animation: highlight 400ms linear 1;}
