Display exception causation chains
Closes #1

--- a/resources/prone/styles.css
+++ b/resources/prone/styles.css
@@ -7,3 +7,6 @@ pre[class*="language-"] {margin-top: 0; background: #fff; padding-bottom: 1.75em
 .line-highlight {background: rgba(220, 30, 30, 0.1); -webkit-animation: highlight 400ms linear 1; -moz-animation: highlight 400ms linear 1; animation: highlight 400ms linear 1;}
 
 .map-path a {color: #28b;}
+
+.caused-by {float: right;}
+.caused-by a {color: #99f;}
