--- a/resources/prone/styles.css
+++ b/resources/prone/styles.css
@@ -10,3 +10,5 @@ pre[class*="language-"] {margin-top: 0; background: #fff; padding-bottom: 1.75em
 
 .caused-by {float: right;}
 .caused-by a {color: #99f;}
+
+header.exception:hover h2 {padding-right: 0;}
