--- a/resources/prone/styles.css
+++ b/resources/prone/styles.css
@@ -16,7 +16,7 @@ pre[class*="language-"] {margin-top: 0; background: #fff; padding-bottom: 1.75em
     border: 1px solid #ccc;
     border-top: none;
     color: #666;
-    height: 30px
+    height: 29px;
     line-height: 30px;
     vertical-align: middle;
     overflow: hidden;
