--- a/resources/prone/styles.css
+++ b/resources/prone/styles.css
@@ -24,3 +24,4 @@ pre[class*="language-"] {margin-top: 0; background: #fff; padding-bottom: 1.75em
     text-align: center;
 }
 header.exception:hover h2 {padding-right: 0;}
+.sub-heading {margin: 20px 0 0;}
