--- a/dev-resources/prone/styles.css
+++ b/dev-resources/prone/styles.css
@@ -5,7 +5,7 @@
 pre[class*="language-"] {margin-top: 0; background: #fff; padding-bottom: 1.75em; padding-left: 1em;}
 .code_linenums {padding-top: 11px;}
 .line-highlight {background: rgba(220, 30, 30, 0.1); -webkit-animation: highlight 400ms linear 1; -moz-animation: highlight 400ms linear 1; animation: highlight 400ms linear 1;}
-.line-numbers-rows {display:none;}
+.line-numbers-rows {visibility: hidden;}
 
 .code {border-top-left-radius: 0;}
 
